--- a/public/resources/css/mainPage.css
+++ b/public/resources/css/mainPage.css
@@ -5,18 +5,18 @@
 }
 
 #uploadData{
+    width: 50%;
+    height: 70%;
+    background-color: blueviolet;
+}
+
+#statusBoard{
     left: 50%;
     width: 50%;
     height: 70%;
     background-color: aqua;
     position: absolute;
-}
-
-#statusBoard{
-    width: 50%;
-    height: 70%;
-    background-color: blueviolet;
-    position: absolute;
+    overflow: scroll;
 }
 
 #donationForm{
