--- a/public/resources/css/listingsPage.css
+++ b/public/resources/css/listingsPage.css
@@ -10,17 +10,17 @@ img:hover {
 
 li {
   list-style: none;
-  /* -webkit-box-pack: left;
-  -ms-flex-pack: left; */
-  justify-content: left;
-  /* -webkit-box-align: center;
-  -ms-flex-align: center; */
-  align-items: center;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 14px;
   margin: 4px;
   position: relative;
-  /* display: -webkit-box;
-  display: -ms-flexbox; */
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   max-width: 100%;
   background-color: rgba(74, 0, 194, 0.699);
@@ -29,26 +29,33 @@ li {
 
 p {
   max-width: 100%;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 #listItems {
-  /* -ms-flex-preferred-size: 50%;
-  flex-basis: 50%;
   -webkit-box-ordinal-group: 3;
-  -ms-flex-order: 2;
-  order: 2;
+      -ms-flex-order: 2;
+          order: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  flex-direction: column;*/
-  justify-content: space-between;
+      flex-wrap: nowrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-left: 15px;
   overflow: auto;
 }
 
 img {
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
+/*# sourceMappingURL=listingsPage.css.map */
