--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -116,10 +116,58 @@ a {
   width: 100vw;
   height: 100%;
   position: absolute;
-  top: 0;
+  top: 0px;
 }
 
 .ngo-login-form form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-preferred-size: 500px;
+      flex-basis: 500px;
+}
+
+.ngo-login-form form h1 {
+  margin: 40px;
+}
+
+.ngo-login-form form .data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 5px auto;
+}
+
+.ngo-login-form form label {
+  display: inline-block;
+  width: 250px;
+}
+
+.ngo-login-form form input {
+  width: 250px;
+  display: inline-block;
+}
+
+.ngo-login-form form label,
+.ngo-login-form form input {
+  margin: auto 5px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.ngo-login-form .ngo-submit {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -129,9 +177,17 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  width: 130px;
+  height: 46px;
+  margin: 50px auto;
+  color: white;
+  background-color: #004d00;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.ngo-login-form .ngo-submit:hover {
+  background-color: green;
 }
 /*# sourceMappingURL=style.css.map */
