--- a/public/resources/css/mainPage.scss
+++ b/public/resources/css/mainPage.scss
@@ -1,67 +1,109 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: "Montserrat", monospace;
-}
-
-img:hover {
-  height: 250px;
-  width: 300px;
+  font-family: "Montserrat", sans-serif;
 }
 
 li {
   list-style: none;
-  -webkit-box-pack: left;
-  -ms-flex-pack: left;
   justify-content: left;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  padding: 14px;
+  padding: 10px;
   margin: 4px;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   max-width: 100%;
-  background-color: rgba(74, 0, 194, 0.699);
-  border-radius: 2vh;
+  background-color: rgba(207, 42, 207, 0.747);
 }
 
 p {
   max-width: 100%;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
+}
+
+div {
+  border-radius: 5px;
+}
+
+#dashboard {
+  width: 100%;
+  height: 20vh;
+  background-color: rgba(48, 91, 172, 0.863);
+}
+
+#uploadData {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  order: 1;
+  flex-basis: 50%;
+  height: 80vh;
+  background-color: rgba(36, 192, 36, 0.87);
+  padding: 5px;
+}
+
+#uploadData button {
+  width: 200px;
+  height: 40px;
+  border: 1px solid black;
+  transition: 0.3s;
+}
+
+.collection {
+  display: flex;
   justify-content: space-between;
 }
 
-#listItems {
-  -webkit-box-ordinal-group: 3;
-  -ms-flex-order: 2;
+#statusBoard {
+  flex-basis: 50%;
   order: 2;
+  height: 80vh;
+  background-color: purple;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding-left: 15px;
   overflow: auto;
+  flex-wrap: wrap;
+  padding: 10px;
 }
 
 img {
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  z-index: 1;
+  margin: 10px;
 }
+
+#donationForm {
+  display: none;
+}
+
+#donationForm button {
+  margin-top: 5px;
+}
+
+#finalDonate {
+  display: none;
+}
+
+#gSignOut {
+  position: absolute;
+  right: 10px;
+}
+
+#myBar {
+  height: 30px;
+  background-color: white;
+  display: none;
+  text-align: center;
+}
+
+#statusBar {
+  width: 50%;
+}
+
 #loading {
   justify-content: center;
   align-items: center;
@@ -75,7 +117,6 @@ img {
   position: relative;
   animation: rotateit 1.3s linear infinite;
 }
-
 @keyframes rotateit {
   from {
     transform: rotate(360deg);
@@ -96,44 +137,35 @@ img {
   top: 35px;
   left: 45px;
 }
-
 .spinner.circles div:nth-child(1) {
   transform: rotate(0deg) translate(0, -35px) scale(1.4);
 }
-
 .spinner.circles div:nth-child(2) {
   transform: rotate(45deg) translate(0, -35px) scale(1.2);
   opacity: 0.7;
 }
-
 .spinner.circles div:nth-child(3) {
   transform: rotate(90deg) translate(0, -35px) scale(1.1);
   opacity: 0.6;
 }
-
 .spinner.circles div:nth-child(4) {
   transform: rotate(135deg) translate(0, -35px) scale(0.9);
   opacity: 0.5;
 }
-
 .spinner.circles div:nth-child(5) {
   transform: rotate(180deg) translate(0, -35px) scale(0.7);
   opacity: 0.4;
 }
-
 .spinner.circles div:nth-child(6) {
   transform: rotate(225deg) translate(0, -35px) scale(0.5);
   opacity: 0.3;
 }
-
 .spinner.circles div:nth-child(7) {
   transform: rotate(270deg) translate(0, -35px) scale(0.3);
   opacity: 0.2;
 }
-
 .spinner.circles div:nth-child(8) {
   transform: rotate(315deg) translate(0, -35px) scale(0.1);
   opacity: 0.1;
 }
-
-/*# sourceMappingURL=listingsPage.css.map */
+/*# sourceMappingURL=mainPage.css.map */
