--- a/public/resources/css/ngoMainPage.css
+++ b/public/resources/css/ngoMainPage.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -9,127 +9,38 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-li {
-  list-style: none;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px;
-  margin: 4px;
-  position: relative;
+.dashboard {
+  background-color: teal;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 100%;
-  background-color: rgba(207, 42, 207, 0.747);
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 25vw;
+          flex: 1 1 25vw;
+  height: 100vh;
+  width: 25vw;
 }
 
-p {
-  max-width: 100%;
-}
-
-div {
-  border-radius: 5px;
-}
-
-#dashboard {
-  width: 100%;
-  height: 20vh;
-  background-color: rgba(48, 91, 172, 0.863);
-}
-
-#uploadData {
+.things-to-be-picked-up {
+  background-color: greenyellow;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  height: 80vh;
-  background-color: rgba(36, 192, 36, 0.87);
-  padding: 5px;
-}
-
-#uploadData button {
-  width: 200px;
-  height: 40px;
-  border: 1px solid black;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 75vw;
+          flex: 1 1 75vw;
+  height: 100vh;
+  width: 75vw;
 }
 
 .collection {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-#statusBoard {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
-  height: 80vh;
-  background-color: purple;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: auto;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 10px;
-}
-
-img {
-  z-index: 1;
-  margin: 10px;
-}
-
-#donationForm {
-  display: none;
-}
-
-#donationForm button {
-  margin-top: 5px;
-}
-
-#finalDonate {
-  display: none;
-}
-
-#gSignOut {
-  position: absolute;
-  right: 10px;
-}
-
-#myBar {
-  height: 30px;
-  background-color: white;
-  display: none;
-  text-align: center;
-}
-
-#statusBar {
-  width: 50%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 #loading {
@@ -232,4 +143,4 @@ img {
           transform: rotate(315deg) translate(0, -35px) scale(0.1);
   opacity: 0.1;
 }
-/*# sourceMappingURL=mainPage.css.map */
+/*# sourceMappingURL=ngoMainPage.css.map */
