i've forgotten what to do

--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -190,4 +190,10 @@ a {
 .ngo-login-form .ngo-submit:hover {
   background-color: green;
 }
+
+#go-back {
+  font-size: 14px;
+  text-decoration: underline;
+  cursor: pointer;
+}
 /*# sourceMappingURL=style.css.map */
