--- a/public/resources/css/style.scss
+++ b/public/resources/css/style.scss
@@ -148,4 +148,9 @@ a {
   }
 }
 
+#go-back {
+  font-size: 14px;
+  text-decoration: underline;
+  cursor: pointer;
+}
 /*# sourceMappingURL=style.css.map */
