--- a/public/resources/css/mainPage.css
+++ b/public/resources/css/mainPage.css
@@ -6,6 +6,8 @@
 }
 
 body {
+  background-color: rgba(255, 166, 0, 0.349);
+  color: green;
   font-family: "Montserrat", monospace;
 }
 
@@ -24,7 +26,11 @@ li {
   display: -ms-flexbox;
   display: flex;
   max-width: 100%;
-  background-color: rgba(207, 42, 207, 0.747);
+  background-color: rgba(255, 166, 0, 0.644);
+}
+
+ul {
+  width: 100%;
 }
 
 p {
@@ -37,8 +43,7 @@ div {
 
 #dashboard {
   width: 100%;
-  height: 20vh;
-  background-color: rgba(48, 91, 172, 0.863);
+  height: 23vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -74,8 +79,6 @@ div {
           order: 1;
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
-  height: 80vh;
-  background-color: rgba(36, 192, 36, 0.87);
   padding: 5px;
 }
 
@@ -91,6 +94,8 @@ div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 77vh;
+  background-color: rgba(255, 166, 0, 0.411);
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -102,8 +107,6 @@ div {
   -webkit-box-ordinal-group: 3;
       -ms-flex-order: 2;
           order: 2;
-  height: 80vh;
-  background-color: purple;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -111,6 +114,7 @@ div {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding: 10px;
+  margin-top: 5px;
 }
 
 img {
@@ -245,5 +249,24 @@ img {
   -webkit-transform: rotate(315deg) translate(0, -35px) scale(0.1);
           transform: rotate(315deg) translate(0, -35px) scale(0.1);
   opacity: 0.1;
+}
+#chartContainer {
+  width: 500px;
+  height: 200px;
+  position: fixed;
+  right: 20px;
+}
+
+#dashboard p {
+  font-size: 32px;
+}
+
+#myDiv {
+  padding: 2px;
+}
+
+li .remove-item {
+  position: absolute;
+  right: 5px;
 }
 /*# sourceMappingURL=mainPage.css.map */
