--- a/public/resources/css/mainPage.css
+++ b/public/resources/css/mainPage.css
@@ -79,7 +79,8 @@ div {
           order: 1;
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
-  padding: 5px;
+  background-color: rgba(255, 166, 0, 0.644);
+  margin: 25px;
 }
 
 #uploadData button {
@@ -114,7 +115,7 @@ div {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding: 10px;
-  margin-top: 5px;
+  margin: 15px;
 }
 
 img {
@@ -124,6 +125,8 @@ img {
 
 #donationForm {
   display: none;
+  background-color: rgba(255, 166, 0, 0.548);
+  padding: 30px;
 }
 
 #donationForm button {
