--- a/public/resources/css/mainPage.scss
+++ b/public/resources/css/mainPage.scss
@@ -58,7 +58,9 @@ div {
   order: 1;
   flex-basis: 50%;
   // background-color: rgba(36, 192, 36, 0.87);
-  padding: 5px;
+  background-color: rgba(255, 166, 0, 0.644);
+  margin: 25px;
+  // padding: 5px;
 }
 
 #uploadData button {
@@ -83,7 +85,7 @@ div {
   overflow: auto;
   flex-wrap: wrap;
   padding: 10px;
-  margin-top: 5px;
+  margin: 15px;
 }
 
 img {
@@ -93,6 +95,8 @@ img {
 
 #donationForm {
   display: none;
+  background-color: rgba(255, 166, 0, 0.548);
+  padding: 30px;
 }
 
 #donationForm button {
