--- a/public/resources/css/ngoMainPage.css
+++ b/public/resources/css/ngoMainPage.css
@@ -143,4 +143,9 @@ body {
           transform: rotate(315deg) translate(0, -35px) scale(0.1);
   opacity: 0.1;
 }
+
+#goBack {
+  position: absolute;
+  right: 5px;
+}
 /*# sourceMappingURL=ngoMainPage.css.map */
