--- a/public/resources/css/ngoMainPage.scss
+++ b/public/resources/css/ngoMainPage.scss
@@ -104,3 +104,8 @@ body {
   transform: rotate(315deg) translate(0, -35px) scale(0.1);
   opacity: 0.1;
 }
+
+#goBack {
+  position: absolute;
+  right: 5px;
+}
