--- a/public/resources/css/ngoMainPage.scss
+++ b/public/resources/css/ngoMainPage.scss
@@ -41,6 +41,12 @@ body {
   padding: 10px;
 }
 
+#chartContainer{
+  margin-top: 30vh;
+  width: 350px;
+  height: 250px;
+}
+
 // FOR SPINNING ANIMATION //
 #loading {
   justify-content: center;
