--- a/public/resources/css/style.scss
+++ b/public/resources/css/style.scss
@@ -153,4 +153,10 @@ a {
   text-decoration: underline;
   cursor: pointer;
 }
+
+#cookie-consent{
+  padding-top: 8vh;
+  text-align: center;
+  font-size: xx-large;
+}
 /*# sourceMappingURL=style.css.map */
