--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -46,6 +46,7 @@ body {
 
 div {
   margin: 3px;
+  margin-bottom: 20px;
 }
 
 a {
@@ -198,8 +199,17 @@ a {
 }
 
 #cookie-consent {
-  padding-top: 8vh;
-  text-align: center;
-  font-size: xx-large;
+  height: 35px;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 18px;
 }
 /*# sourceMappingURL=style.css.map */
