--- a/public/resources/css/ngoMainPage.css
+++ b/public/resources/css/ngoMainPage.css
@@ -22,6 +22,10 @@ body {
   width: 25vw;
   margin-right: 5px;
   padding-left: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: rgba(255, 166, 0, 0.411);
 }
 
@@ -235,5 +239,11 @@ li {
           flex-direction: column;
   position: absolute;
   top: 0px;
+}
+
+#chartContainer {
+  height: 250px;
+  width: 100%;
+  position: relative;
 }
 /*# sourceMappingURL=ngoMainPage.css.map */
