CSS changes, dashboard

--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -201,15 +201,28 @@ a {
 #cookie-consent {
   height: 35px;
   width: 100vw;
+  background-color: rgba(0, 180, 0, 0.459);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+#cookieNotice {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 18px;
+  font-size: 25px;
+}
+
+#cancelCookieDisplay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 /*# sourceMappingURL=style.css.map */
