--- a/public/resources/css/mainPage.css
+++ b/public/resources/css/mainPage.css
@@ -51,13 +51,37 @@ div {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
 }
 
-#chartContainer {
+#userDetails {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 300px;
+          flex: 1 1 300px;
+  padding-left: 5vw;
+}
+
+#chartContainer1 {
   padding-top: 20px;
   margin-right: 50px;
-  width: 300px;
-  height: 150px;
+  height: 180px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 300px;
+          flex: 1 1 300px;
+}
+
+#chartContainer2 {
+  padding-top: 20px;
+  height: 180px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 300px;
+          flex: 1 1 300px;
 }
 
 #uploadData {
@@ -254,15 +278,8 @@ img {
           transform: rotate(315deg) translate(0, -35px) scale(0.1);
   opacity: 0.1;
 }
-#chartContainer {
-  width: 500px;
-  height: 200px;
-  position: fixed;
-  right: 20px;
-}
-
 #dashboard p {
-  font-size: 32px;
+  font-size: 25px;
 }
 
 #myDiv {
