--- a/public/resources/css/mainPage.scss
+++ b/public/resources/css/mainPage.scss
@@ -38,16 +38,29 @@ div {
 #dashboard {
   width: 100%;
   height: 23vh;
-  // background-color: rgba(48, 91, 172, 0.863);
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-content: space-between;
 }
 
-#chartContainer {
+#userDetails{
+  flex: 1 1 300px;
+  padding-left: 5vw;
+}
+
+#chartContainer1 {
   padding-top: 20px;
   margin-right: 50px;
-  width: 300px;
-  height: 150px;
+  height: 180px;
+  flex: 1 1 300px;
+}
+
+#chartContainer2{
+  padding-top: 20px;
+  height: 180px;
+  flex: 1 1 300px;//flex grow, shrink, basis
 }
 
 #uploadData {
@@ -202,16 +215,22 @@ img {
 }
 /*# sourceMappingURL=mainPage.css.map */
 
-#chartContainer {
-  width: 500px; // to be changed with media queries
-  height: 200px; // to be changed with media queries
-  position: fixed;
-  right: 20px;
-}
+// #chartContainer1 {
+//   width: 500px; // to be changed with media queries
+//   height: 200px; // to be changed with media queries
+//   position: fixed;
+//   right: 20px;
+// }
+
+// #chartContainer2 {
+//   width: 500px; // to be changed with media queries
+//   height: 200px; // to be changed with media queries
+//   right: 20px;
+// }
 
 #dashboard {
   p {
-    font-size: 32px;
+    font-size: 25px;
   }
 }
 
