--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -224,5 +224,6 @@ a {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
